--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.0.0",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
