--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.15.6",
     "mongoose": "^5.0.7",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "semantic-ui": "^2.3.0"
   }
 }
