--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^5.0.7",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "semantic-ui": "^2.3.0"
+    "semantic-ui": "^2.3.0",
+    "stripe": "^5.5.0"
   }
 }
