--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,9 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "9.2.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
